--- a/moduflip17_aws/jupyter_notebook/1st_week_clouding_service.ipynb
+++ b/moduflip17_aws/jupyter_notebook/1st_week_clouding_service.ipynb
@@ -12,10 +12,10 @@
     "\n",
     "1. IaaS,  PaaS,  SaaS의  비교\n",
     "2. Public  Cloud,  Private  Cloud,  Hybrid  Cloud의  비교\n",
-    "3. DAS,  SAN,  NAS의  비교(검색  키워드  :  스토리지\n",
+    "3. DAS,  SAN,  NAS의  비교\n",
     "\n",
     "\n",
-    "### 클라우드 컴퓨팅(cloud computing)\n",
+    "### 0. 클라우드 컴퓨팅(cloud computing)\n",
     "\n",
     "그리드 컴퓨팅, 유틸리티 컴퓨팅, 서비스로서의 소프트웨어 개념이 혼합된 컴퓨팅 인프라의 집합이다. 데스크탑PC, 휴대폰, 노트북등 물리적으로 서로 다른 위치에 존재하는 다양한 정보들을 웹기반 애플리캐이션을 활용하여서 대용량 데이터 베이스를 가상화 기술을 통합하여 제공하는 기술 및 환경을 말한다. 즉, 인터넷 기반 컴퓨팅의 일종으로 정보를 자신의 컴퓨터가 아닌 인터넷에 연결된 다른 컴퓨터로 처리하는 기술을 말한다. 컴퓨터의 각종 연산 및 처리를 개인 PC가 아닌 인터넷 공간에서 사용하는 것이다.\n",
     "\n",
@@ -41,24 +41,137 @@
     "\n",
     "\n",
     "\n",
-    "### 1. IaaS,  PaaS,  SaaS의  비교\n",
+    "### 1. IaaS,  PaaS,  SaaS의  비교: 클라우드 컴퓨팅 서비스 유형\n",
     "\n",
     "IaaS(Infrastructure-as-a-Service), Paas(Platform as a Service), SaaS(Software as a Service)는 클라우드 컴퓨팅 서비스의 유형이다.\n",
     "\n",
     "초기 클라우드 서비스는 소프트웨어를 웹에서 쓸 수 있는 __SaaS__ (구글시트, 드롭박스 등)가 대부분이었으나, 이후 서버와 스토리지, 네트워크 장비 등의 IT인프라 장비를 빌려주는 __IaaS__ 와 플랫폼을 빌려주는 __PaaS__ 으로 확장되고 있다.\n",
     "\n",
     "클라우드 서비스는 어떤 자원을 제공하느냐에 따라서 __SaaS__, __IaaS__, __PaaS__ 세가지로 나뉘게 된다. \n",
-    "- IaaS(Infrastructure-as-a-Service)\n",
-    ": 서드파티 업체가 제공하는 고도로 자동화되고 확장 가능한 IT인프라를 의미한다. 이 인프라에는 스토리지, 호스팅, 컴퓨팅, 네트워킹이 포함된다. "
+    "\n",
+    "\n",
+    "\n",
+    "아래 그림의 \n",
+    "__파란색은 클라우드 제공자__ 가 관리, __흰색은 클라우드 사용자__ 가 관리한다. \n",
+    "\n",
+    "왼쪽으로 갈수록 클라우드 제공자가 더 많이 관리한다고 보면된다. \n",
+    "가장 많은 서비스를 제공 받게 되는 SaaS부터 시작하여서 __SaaS<<Paas<<IaaS<<온프레미스__ 가장 많은 관리를 하는 온프레미스로 기억하면 될 것 같다.\n",
+    "![](https://github.com/Asunny2019/moduflip_aws/blob/main/moduflip17_aws/img/1st_i.PNG?raw=true)\n",
+    "\n",
+    "\n",
+    "#### 1-1. IaaS(Infrastructure-as-a-Service)\n",
+    ":인프라는 클라우드 IT의 기본 요소들을 포함하고 일반적으로 네트워킹 기능, 컴퓨터(가상 또는 전용 하드웨어) 및 데이터 스토리지 공간을 제공한다. 가상화된 물리적인 자산을 UI형태의 대시보드 혹은 API로 제공한다. \n",
+    "IaaS 고객들은 서버와 스토리지에 접근할 수 있지만 사실상 클라우드에 있는 가상 데이터 센터를 통해 리소스를 전달받는 형태이다. IaaS는 기존의 데이터센터에서 제공받던 __물리적인 자산을 완벽하게 가상화__ 하여 제공하기 때문에 서버 사양의 변경 등 물리적 자산의 수정이 필요한 경우 기존의 방식에 비해 빠르게 대응이 가능하다. \n",
+    "서비스로서의 인프라는 IT 리소스에 대해 가장 높은 수준의 유연성과 관리 제어를 제공하며 오늘날 많은 IT부서와 개발자에게 익숙한 기존 IT리소스와 가장 흡사하다.\n",
+    "넷플릭스는 자체 데이터 센터를 구축하여 서비스를 운영하는 대신 AWS의 IaaS서비스를 이용하는 방식을 채택하고 있다.\n",
+    "\n",
+    "\n",
+    "#### 1-2. PaaS(Platform-as-a-Service)\n",
+    ": 소프트웨어 서비스를 개발할 때 필요한 플랫폼을 제공하는 서비스이다. 사용자는 PaaS에서 필요한 서비스를 선택해 애플리케이션을 개발하고, PaaS 운영업체는 개발자가 소프트웨어를 개발할 때 필요한 API를 제공해 개발자가 좀 더 편하게 앱을 개발 할 수 있게 지원한다.\n",
+    "\n",
+    "#### 1-3. SaaS(Software-as-a-Service)\n",
+    ": 클라우드 환경에서 운영되는 애플리케이션 서비스를 운영되는 애플리케이션 서비스를 의미한다. 모든 서비스가 클라우드에서 이루어지는데 소프트웨어를 구입하여 PC에 설치하지 않아도 웹에서 소프트웨어를 빌려 쓸 수 있는 환경을 말한다. 일반적으로 서비스로서의 소프트웨어라고 하면 최종 사용자 애플리케이션을 말한다. \n",
+    "\n",
+    "\n",
+    "#### 1-4. 클라우드 컴퓨팅 서비스 유형의 장단점\n",
+    "||SaaS|PaaS|IaaS|\n",
+    "|:-:|:-:|:-:|:-:|\n",
+    "|장점|소프트웨어를 구입이 아니라 소비하는 형태이므로 비용부담이 적고, 즉시 사용이 가능하다.<br/>소프트웨어를 설치한 물리적 자원이 필요하지 않고 어디서든 접근 가능하다.|필요한 플랫폼만 소비하기 때문에 비용부담을 덜 수 있다. <br/> 개발 및 배포 프로세스를 빠르게 확보할 수 있다. <br/> 소프트웨어 유지관리가 쉽고 가상화 기술을 기반으로 구축되어 비지니스가 변함에 따라 리소스를 확장하고 축소하는게 쉽다. <br/> 응용 프로그램 개발, 테스트 및 배포를 지원하는 다양한 서비스를 제공한다. <br/>수많은 사용자가 동일한 개발 응용 프로그램에 액세스 할 수 있다.|물리적 자원을 서비스 형태로 사용하기 때문에 고정비가 들지 않는다.<br/> 물리적 자원을 즉시 소비할 수 있다<br/> 물리적 자원에 대한 자동화된 배포가 가능하다. <br/> 물리적 자원에 대한 안정적인 운영을 벤더에게 맡길 수 있다. <br/> 물리적 자원에 대한 규모의 확장 또는 축소가 자유롭다|\n",
+    "|단점|커스터마이징이 어렵다|특정 플랫폼 서비스에 종속될 수 있다.||"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "출처 및 참고\n",
+    "### 2. Public  Cloud,  Private  Cloud,  Hybrid  Cloud의  비교: 클라우드 서비스 운용 형태\n",
+    "\n",
+    " 클라우드 서비스를 시작하기 전에 먼저 결정해야 할 사항들이 있다. 바로 클라우드 배포 유형 또는 클라우드 컴퓨팅 아키텍처이다. 클라우드 서비스를 배포하는 방식에는 공용 클라우드(Public Cloud), 사설 클라우드(Private Cloud), 하이브리드 클라우드(Hybrid Cloud)가 있다. \n",
+    "\n",
+    "#### 2-1.공용 클라우드(Public Cloud)\n",
+    "\n",
+    " 공용 클라우드는 인터넷을 통해 서버 및 저장소와 같은 컴퓨팅 리소스를 제공하는 타사 클라우드 서비스 공급자가 소유하고 운영한다. 공용 클라우드를 사용할 경우 모든 하드웨어, 소프트웨어 및 기타 지원 인프라를 클라우드 공급자가 소유관리한다. 사용자는 웹브라우저를 사용해 서비스를 액세스하고 계정 관리만 하면 된다.\n",
+    " \n",
+    " \n",
+    "#### 2-2. 사설 클라우드(Private Cloud)\n",
+    "\n",
+    " 사설 클라우드는 단일 비지니스 또는 조직에서 독점적으로 사용되는 클라우드 컴퓨팅 리소스를 의미한다. 사설 클라우드는 회사의 실제 온사이트 데이터 센터 내에 배치할 수 있다. 일부 회사에서는 해당 사설 클라우드를 사용하기 위해 타사 서비스 공급자에 비용을 지급하기도 한다. 사설 클라우드는 서비스와 인프라가 개인 네트워크 환경에서 유지 관리되는 클라우드이다.\n",
+    " \n",
+    " \n",
+    "#### 2-3. 하이브리드 클라우드(Hybrid Cloud)\n",
+    "\n",
+    "혼합형 클라우드 혹은 하이브리드 클라우드는 공용 클라우드와 사설 클라우드 사이 데이터와 응용 프로그램을 공유할 수 있는 기술로, 함께 연결된 공용 클라우드와 사설 클라우드를 결합하는 구조를 의미한다. 하이브리드 클라우드는 데이터 및 응용프로그램을 사설 클라우드와 공용 클라우드 간에 이동할 수 있도록 만들어져 비지니스에 더 높은 유연성과 개발 옵션을 제공하며, 기존 인프라와 보안 및 규정 준수를 최적화할 수 있게 지원한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. DAS,  SAN,  NAS의  비교- 스토리지 네트워킹\n",
+    "\n",
+    "데이터 스토리지란?\n",
+    "말그대로 데이터를 저장하는 공간을 말한다. AWS나 구글 데이터 센터에 무수히 꽂혀 있는 하드디스켓 지금은 거의 사용되지 않는 플로피 디스크까지 모두 데이터 스토리지라고 할 수 있다.\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### 3-1. DAS(Direct-attached Storage)\n",
+    "초창기 서버에는 RAM(주기억장치, primary)와 하드디스크(보조 기억장치, secondary storage)가 구분 되어있지 않았으나 용량이 증가하면서 보조 기억장치가 탄생하였다. 이게 직접 연결 스토리지(Direct-attached Storage, DAS) 개념의 첫사례가 된다. \n",
+    "\n",
+    "#### 3-2. SAN(Storage Area Network)\n",
+    "\n",
+    "서버의 스토리지 용량을 추가해야하는 경우 다른 서버에서 디스크를 물리적으로 빼서 추가해야하는 불편함을 해소하기 위해서 고안 된 것이 SAN이다.\n",
+    "\n",
+    "SAN은 여러 스토리지를 하나의 네트워크로 연결하고, 이 네트워크에 서버를 연결하여 서버를 통해 네트워크에 접속하는 개념이다. 스토리지들은 가상으로 중앙화된 __논리 볼륨(logical volume)__ 을 형성하고, 필요에 따라 각 서버에 공간을 논리적으로 할당할 수 있다. 사용자는 __LUN(Logical Unit Number)__ 라는 고유번호를 통해 가상으로 할당된 디스크 드라이브에 연결된다.\n",
+    "![](https://tech.gluesys.com/assets/basic_san_env.png)\n",
+    "SAN 환경을 구성하기 위해서는 SAN 스위치라는 기기를 필요로 하게 됩니다. SAN 스위치는 위에 설명 드렸던 개념을 구현하기 위해 스토리지와 서버를 중계하는 역할을 한다. SAN의 주요한 프로토콜로 iSCI(Internet Small Computer System Interface), fiber Channel, iSER(iSCSI Extentions for RDMA)가 있다.\n",
+    "\n",
+    "SAN환경에서는 블록 스토리지(block storage) 라는 방식으로 파일을 저장한다. 데이터를 블록이라는 일정한 크기의 조각으로 나누어서 저장하고 각 블록들은 저장된 위치에 대한 주소를 가지고 있어서 서버의 요청에 따라 데이터를 재구성하여 서버에 보내게 된다.\n",
+    "\n",
+    "- 장점\n",
+    " 광케이블을 사용하기에 데이터 접근 속도가 빠르다.\n",
+    " 성능과 용량의 확장성이 좋다\n",
+    " 네트워크의 부하를 최소화 할수 있다.(LAN 사용 안함)\n",
+    " 가상화 환경을 구축하기에 좋다.\n",
+    " \n",
+    "- 단점\n",
+    " 상대적으로 비싸고 이더넷 네트워크와 광케이블 네트워크를 동시에 운영하기 때문에 전문인력이 관리해야한다. \n",
+    " 블록 백업에 공간이 더 요구된다.\n",
+    " \n",
+    " \n",
+    "   \n",
+    "\n",
+    "#### 3-3. NAS (Network Attached Storage)\n",
+    "업무나 자료들을 동시에 공유하고 수정하는 일이 많아졌다. 스토리지에 접속하는 사용자가 증가하고 공유가 필요한 자료가 많아지면서 데이터를 쉽게 공유하는 방법이 필요해져서 생긴 것이 NAS이다. \n",
+    "\n",
+    "NAS도 네트워크를 통해 서버나 클라이언트가 스토리지롸 연결하지만 이더넷을 통해 연결하는 방식을 취한다. 스토리지를 이더넷 케이블을 사용해 네트워크에 연결한다. 인터넷 공유기에 NAS를 연결하면 같은 이더넷 네트워크에 연결된 PC로 NAS에 접근할 수 있다. 범용적인 네트워크를 사용하는 관계로 설치나 유지관리가 쉽지만, 같은 이더넷에 연결된 장비들과 네트워크 자원을 공유하기 때문에 대역폭에 한계가 있을 수 있다.\n",
+    "\n",
+    "![](https://tech.gluesys.com/assets/basic_nas_env.png)\n",
+    "  \n",
+    "  \n",
+    "  자체적으로 파일 서비스를 제공하며 대표적으로 NFS나 CIFS와 같은 스토리지 프로토콜을 사용한다. NFS(Network File System), SMB/CIFS(Server Message Block/Common Internet File System), FTP(File Transfer Protocol), HTTP(hypertext transfer protocol), AFP(Apple Filing Protocol)\n",
+    "\n",
+    "NAS의 경우 블록보다 상위 개념인 파일(file)을 저장 단위로 하고 있다. 파일은 폴더에 저장되며 하나의 폴더에 여러 하위 폴더가 겹겹이 존재하는 계층적(hierarchical)구조를 갖고 있어서 각파일은 이름과 파일에 대한 메타데ㅣ터를 가지고 이 메타데이터로 파일이 어디에 위치한지 알수 있다. NAS는 스토리지 시스템이 포함된 어플라이언스와 시스템이 포함안된 게이트웨이 두가지 형태로 구성될 수 있다. \n",
+    "\n",
+    "- 장점\n",
+    "이더넷 네트워크에 스토리지를 연결하면 되므로 인프라 구축비용이 없고, 단수한 구조라서 유지관리가 편하다. 스케일 아웃방식의 NAS는 클러스터 구성이 가능해 성능과 용량을 모두 늘릴 수 있다. \n",
+    "\n",
+    "- 단점\n",
+    "광케이블에 비해서 이더넷을 사용하기에 전송이 느리다.\n",
+    "공유 네트워크를 사용해 대역폭이 제한이 되었고, 데이터를 IP패킷으로 캡슐화하는 과정속에서 지연이 발생해서 네트워크 병목에 취약하다.\n",
+    "스케일업방식의 NAS는 성능과 용량 확장에 한계가 있다.\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 출처 및 참고\n",
     "1. 당신이 지금 알아야 할 AWS / 이영호, 한동수 지음\n",
-    "2. 데이터홀릭- 박박사와 떠나는 컴퓨터 여행 3편: 드디어 클라우드 https://www.youtube.com/watch?v=GUgKsOj9gq8&list=PLOvmIXlrvHO18HuniAOdzlvMQxHumeAoE&index=97"
+    "2. [데이터홀릭- 박박사와 떠나는 컴퓨터 여행 3편: 드디어 클라우드](https://www.youtube.com/watch?v=GUgKsOj9gq8&list=PLOvmIXlrvHO18HuniAOdzlvMQxHumeAoE&index=97)\n",
+    "3. [와탭 모니터링](https://www.whatap.io/ko/blog/9/)\n",
+    "4. [기획특집-기지개 켠 국내 PaaS시장, 핵심은 '쿠버네티스'](https://www.comworld.co.kr/news/articleView.html?idxno=49864)\n",
+    "5. [스토리지 기초지식 1편: DAS, SAN 그리고 NAS](https://tech.gluesys.com/blog/2019/12/02/storage_1_intro.html)"
    ]
   }
  ],
